--- a/new-app/package.json
+++ b/new-app/package.json
@@ -23,7 +23,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.11.0",
+    "eslint": "5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
